Revisao ok. classe DAO com heranca e collection

--- a/index.html
+++ b/index.html
@@ -192,23 +192,23 @@
                 <div class="row">
                     <div class="col colNome">
                         <div class="form-group">
-                            <label for="formClienteNome">Nome</label><br>
-                            <input id="formClienteNome" class="form-control" name="nome" type="text" disabled="true"
-                                required><br>
+                            <label for="formClienteCPF">CPF</label><br>
+                            <input id="formClienteCPF" class="form-control" name="cpf" type="text" minlength="11"
+                                maxlength="11" disabled="true" required><br>
                         </div>
                     </div>
                     <div class="col colNovoNome">
                         <div class="form-group">
-                            <label for="formClienteNovoNome" style="display:none">Nome do cliente:</label><br>
-                        <input id="formClienteNovoNome" style="display:none" class="form-control" name="novoNome" type="text"
-                            disabled="true"><br>
+                            <label for="formClienteNovoCPF" style="display:none">CPF</label><br>
+                            <input id="formClienteNovoCPF" style="display:none" class="form-control" name="novoCpf" type="text" minlength="11"
+                                maxlength="11" disabled="true"><br>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label for="formClienteCPF">CPF</label><br>
-                            <input id="formClienteCPF" class="form-control" name="cpf" type="text" minlength="11"
-                                maxlength="11" disabled="true" required><br>
+                            <label for="formClienteNome">Nome do cliente</label><br>
+                            <input id="formClienteNome" class="form-control" name="nome" type="text" disabled="true"
+                                required><br>
                         </div>
                     </div>
                 </div>
