--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 
                     <div class="col">
                         <div class="form-group">
-                            <label for="formEventoDataFim">Data de término</label><br>
-                            <input id="formEventoDataFim" class="form-control" name="dataFim" type="datetime-local"
+                            <label for="formEventoDataTermino">Data de término</label><br>
+                            <input id="formEventoDataTermino" class="form-control" name="dataTermino" type="datetime-local"
                                 disabled="true" required><br>
                         </div>
                     </div>
@@ -128,24 +128,24 @@
 
                     <div class="col">
                         <div class="form-group">
-                            <label for="formEventoMinimo">Número mínimo de participantes:</label><br>
-                            <input id="formEventoMinimo" class="form-control" name="minimo" type="number"
+                            <label for="formEventoQuorum">Número mínimo de participantes:</label><br>
+                            <input id="formEventoQuorum" class="form-control" name="quorum" type="number"
                                 disabled="true" required min="1"><br>
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="form-group">
-                            <label for="formEventoOrcamento">Orçamento prévio:</label><br>
-                            <input id="formEventoOrcamento" class="form-control" name="orcamento" type="number"
+                            <label for="formEventoOrcamentoPrevio">Orçamento prévio:</label><br>
+                            <input id="formEventoOrcamentoPrevio" class="form-control" name="orcamentoPrevio" type="number"
                                 disabled="true" required min="1" step="1"><br>
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="form-group">
-                            <label for="formEventoIngresso">Valor do ingresso:</label><br>
-                            <input id="formEventoIngresso" class="form-control" name="ingresso" type="number"
+                            <label for="formEventoValorIngresso">Valor do ingresso:</label><br>
+                            <input id="formEventoValorIngresso" class="form-control" name="valorIngresso" type="number"
                                 disabled="true" required min="1" step="1"><br>
                         </div>
                     </div>
@@ -242,15 +242,15 @@
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label for="formClienteFone1">Telefone residencial:</label><br>
-                            <input id="formClienteFone1" class="form-control" name="telRes" type="tel" minlength="10"
+                            <label for="formClienteNumFone1">Telefone residencial:</label><br>
+                            <input id="formClienteNumFone1" class="form-control" name="numFone1" type="tel" minlength="10"
                                 maxlength="11" disabled="true" required><br>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label for="formClienteFone2">Telefone Celular:</label><br>
-                            <input id="formClienteFone2" class="form-control" name="telCel" type="tel" minlength="10"
+                            <label for="formClienteNumFone2">Telefone Celular:</label><br>
+                            <input id="formClienteNumFone2" class="form-control" name="numFone2" type="tel" minlength="10"
                                 maxlength="11" disabled="true" required><br>
                         </div>
                     </div>
@@ -259,7 +259,7 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formClienteEventos">Eventos inscritos:</label><br>
-                            <textarea id="formClienteEventos" class="form-control" name="eventosInscritos" cols="100"
+                            <textarea id="formClienteEventos" class="form-control" name="eventos" cols="100"
                                 rows="5" disabled="true" required></textarea><br>
                         </div>
                     </div>
