Funcao de inscricao (front-end), funcao de simulacao do valor do ingresso

--- a/operacoes/index.html
+++ b/operacoes/index.html
@@ -10,9 +10,24 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+
+    <!-- Javascript interno -->
+    <script src="../javascript/summit.js"></script>
+
+    <script>
+        $(function () {
+            operacoesEventos("Cliente");
+        });
+    </script>
 </head>
 
-<body onload="preencheOperacoes()">
+
+<body>
     <div class="container">
         <div class="row my-3">
             <div class="col">
@@ -37,61 +52,44 @@
             </div>
         </div>
         <div class="row mt-5">
-            <div class="col">
+            <div class="col" id="campoCliente">
                 <div class="input-group-append">
                     <span class="input-group-text">
                         <h5>Clientes</h5>
                     </span>
-                    <button class="btn btn-success" type="button">Adicionar</button>
+                    <button class="btn btn-success" type="button"
+                        onclick="executaXML('inscrever','Inscricao')">Enviar</button>
                 </div><br>
-                <div class="input-group mb-3" id="modalFormClientes">
-                    <select class="custom-select" id="inputGroupSelect01">
+                <form class="input-group mb-3" id="formInscricao">
+                    <select class="custom-select" id="inputGroupSelect01" name="inscricao">
+                        <option value=""></option>
                     </select>
-                    <div class="input-group-prepend">
-                        <button class="btn btn-outline-secondary" type="button">Excluir</button>
-                    </div>
-                </div>
+                </form>
             </div>
         </div>
         <div class="row mt-5">
-                <div class="col">
+            <div class="col">
+                <div class="input-group-append">
+                    <span class="input-group-text">
+                        <h5>Simular Ingresso</h5>
+                    </span>
+                </div><br>
+                <label for="campoAdulto">Ingresso Adulto e Criança</label><br>
+                <form class="input-group mb-3" id="formSimulacao">
+                        <input id="campoAdulto" class="form-control" name="adulto" type="number">
+                        <input id="campoCrianca" class="form-control" name="crianca" type="number">
                     <div class="input-group-append">
-                        <span class="input-group-text">
-                            <h5>Simular Ingresso</h5>
-                        </span>
-                        <button class="btn btn-success" type="button">Adicionar</button>
-                    </div><br>
-                    <div class="input-group mb-3" id="modalFormClientes">
-                            <input type="text" class="form-control" required>
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button">Excluir</button>
-                            </div>
+                        <button class="btn btn-outline-secondary" type="button"
+                            onclick="simulaIngresso()">Calcular</button>
+                        <span class="input-group-text" id="resultadoSimulacao"></span>
                     </div>
-                </div>
+                </form>
             </div>
-            <div class="row mt-5">
-                    <div class="col">
-                        <div class="input-group-append">
-                            <span class="input-group-text">
-                                <h5>Simular Ingresso</h5>
-                            </span>
-                            <button class="btn btn-success" type="button">Adicionar</button>
-                        </div><br>
-                        <div class="input-group mb-3" id="modalFormClientes">
-                                <input type="text" class="form-control" required>
-                                <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary" type="button">Excluir</button>
-                                </div>
-                        </div>
-                    </div>
-                </div>
+        </div>
     </div>
 
 
     <!-- Javascript do Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
@@ -99,8 +97,6 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <!-- Javascript interno -->
-    <script src="../javascript/summit.js"></script>
 </body>
 
 </html>
